<resources>

    <string name="app_name">loungeDroid</string>

    <!-- List Activity -->
    <string name="title_activity_article_list">loungeDroid : News viewer</string>

    <!-- Detail Activity -->
    <string name="title_activity_article_detail">loungeDroid : Article viewer</string>
    <string name="browserButton">See in browser</string>
    <string name="starIt">Star it</string>
    <string name="unStar">Unstar</string>
    <string name="markAsRead">Mark as read</string>
    <string name="notRead">Mark as unread</string>

    <!-- Option Menu in ArticleListActivity -->
    <string name="menu_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="markAllRead">Mark all as read</string>
    <string name="displayMenu">Display …</string>
    <string name="showAll">Show all articles</string>
    <string name="showUnread">Show only unread</string>
    <string name="showStarred">Show only starred</string>

    <!-- Preferences -->
    <string name="title_activity_article_settings">Settings</string>
    <string name="pref_server_category">Server configuration</string>
    <string name="pref_server_url">Server url</string>
    <string name="hint_server_url">http(s)://www.example.org/rsslounge</string>
    <string name="pref_server_username">User name</string>
    <string name="pref_server_password">Password</string>
    <string name="pref_behaviour_category">loungeDroid\'s behaviourd</string>
    <string name="pref_behaviour_todisplay">Articles to display on start…</string>

</resources>